set02/problem07_session.txt
**********************
Windows PowerShell transcript start
Start time: 20231026094625
Username: DESKTOP-A3IRVTV\grimd
RunAs User: DESKTOP-A3IRVTV\grimd
Configuration Name: 
Machine: DESKTOP-A3IRVTV (Microsoft Windows NT 10.0.19045.0)
Host Application: C:\Windows\System32\WindowsPowerShell\v1.0\powershell.exe -noexit -command try { . "c:\Users\grimd\AppData\Local\Programs\Microsoft VS Code\resources\app\out\vs\workbench\contrib\terminal\browser\media\shellIntegration.ps1" } catch {}
Process ID: 13712
PSVersion: 5.1.19041.3570
PSEdition: Desktop
PSCompatibleVersions: 1.0, 2.0, 3.0, 4.0, 5.0, 5.1.19041.3570
BuildVersion: 10.0.19041.3570
CLRVersion: 4.0.30319.42000
WSManStackVersion: 3.0
PSRemotingProtocolVersion: 2.3
SerializationVersion: 1.1.0.1
**********************
Transcript started, output file is c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07_session.txt
PS C:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2> gcc -g "c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c" -o "c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.exe" 2>&1
gcc : c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c: In function
'find_area':
At line:1 char:1
+ gcc -g "c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-cla ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (c:\Users\grimd\...on 'find_area'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError

c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c:32:1: error: expected ';'
before '}' token
 }
 ^
    + FullyQualifiedErrorId : NativeCommandError

c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c:32:1: error: expected ';'
before '}' token
 }
 ^
PS C:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2> gcc -g "c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c" -o "c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.exe" 2>&1
gcc : c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c: In function
'find_area':
At line:1 char:1
+ gcc -g "c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-cla ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (c:\Users\grimd\...on 'find_area'::String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError

c:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2\set02\problem07.c:32:1: error: expected ';'
before '}' token
 }
 ^

PS C:\Users\grimd\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-GauravNegi2> Stop-Transcript
**********************
Windows PowerShell transcript end
End time: 20231026094658
**********************
